--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 asgiref==3.7.2
-Django==4.1.9
+Django==4.2.1
 django-cors-headers==4.0.0
 django-environ==0.10.0
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
+mysqlclient==2.1.1
 Pillow==9.5.0
 psycopg2==2.9.6
 PyJWT==2.7.0
