--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 asgiref==3.7.2
+dj-static==0.0.6
 Django==4.2.1
 django-cors-headers==4.0.0
 django-environ==0.10.0
@@ -10,4 +11,7 @@ psycopg2==2.9.6
 PyJWT==2.7.0
 pytz==2023.3
 sqlparse==0.4.4
+static3==0.7.0
+typing_extensions==4.6.3
 tzdata==2023.3
+whitenoise==6.4.0
